Adding Redis working with docker